Bug #1343 - Mobile: On Group Admin View > Membership > Invite New Member, text overflows box

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -639,6 +639,10 @@ body{
             margin-top: 0;
             margin-bottom: 17px;
         }
+        a{
+            word-wrap: break-word;
+            word-break: break-all;
+        }
     }
     .group-header{
         .bp-template-notice{
